# pymodia

./: .gitignore  .gitlab-ci.yml  COMPILATION.md  README.md  environment.yml  meta.yaml  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml  deploy.yml  docs.yml
deploy/: build_docker_linux_pypi.sh  docker_test_github.sh
docs/: background.rst  community_guidelines.rst  conf.py  examples.rst  index.rst  installation.rst  usage.rst  user_interface.rst
docs/_static/css/: custom.css
docs/_templates/: breadcrumbs.html
examples/: .gitignore  Makefile  benzene.py  bh3_qualitative.py  ch4.py  ch4_default.py  ch4_foster_boys.py  co.py  ethylene.py  ethylene_symad.py  h2.py  n2.py  n2_foster_boys.py  n2_qualitative.py  new_ch4.py
pymodia/: __init__.py  atom.py  atom_data.json  background.py  data.py  empty.py  fragment.py  helpers.py  modiagram.py  molecule.py  settings.py  style.py  subscript.py  superscript.py
tests/: test_H2.py  test_N2.py  test_general.py
